--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,4 +1,5 @@
 .kaufman__triangle {
+    background-image: url(../../../images/kaufman-triangle.svg);
     background-size: contain;
     height: 877px;
     width: 877px;
@@ -8,4 +9,5 @@
     top: 0;
     margin: 0;
     padding: 0;
+    border: 0;
 }
