--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -1,5 +1,6 @@
 .khan__book-container {
     margin: 68px 0 0 0;
     padding: 0;
-    position: relative;   
+    display: flex;   
+    justify-content: flex-start;
 }
