--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,14 +1,12 @@
 .khan__buy-link {
+    display: flex;
     margin: 0;
     padding: 0;
     font-size: 30px;
     font-weight: normal;
     line-height: 42px;
-    position: absolute;
-    top: 0;
     text-decoration: none;
     color: #2f80ed;
-    left: 668px;
 }
 
 .khan__buy-link:hover {
