--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,8 +1,9 @@
 .khan__book-pic {
-    display: inline-block;
     margin: 0 48px 0 0;
     padding: 0;
     width: 608px;
     height: 620px;
     overflow: hidden;
+    object-fit: cover;
+    object-position: top;
 }
